Fix alignment for ul#social.

--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ article ul#social {
 	list-style-type: none;
 
 	padding: 0;
-	margin: 0 auto;
+	margin: 0 35px;
 
 	width: auto;
 	text-align: left;
